# pamila

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
config/: magnets.yaml  power_converters.yaml
scripts/: access_config_data.py  calculate_quadrupole_response.py  measure_quadrupole_response.py
src/pamila/config/: service.py
src/pamila/config/model/: magnet.py  power_converter.py
src/pamila/config/repository/: querries.py
src/pamila/interface/: settable_device.py
src/pamila/managers/: build_managers_from_config.py
src/pamila/managers/model/: elementmodel.py  identifiers.py  liaison_manager.py  state_conversion.py  translator_service.py
