[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pamila"
version = "0.0.0"
description = "python accelerator middle layer"
authors = ["Wahedullah Sulaiman Khail", "Hidaka, Yoshiteru"]
license = "GPL-3.0"
# until we have the repoitory
# poerty is picky
homepage = "https://github.com/hz-b/pamila"
documentation = "https://github.com/hz-b/pamila"
repository = "https://github.com/hz-b/pamila"
keywords = []

[tool.poetry.dependencies]
python = ">=3.7"
pydantic = "*"
# PAckages below here are to be revisited if we need to depend on them
lat2db= "*"
ophyd-async = "*"